Finalizando serviço de pontuação de famílias

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 .vs/
+
+DesafioSelecao.Aplicacao/bin/
+
+DesafioSelecao.Aplicacao/obj/
+
+DesafioSelecao.Dominio/bin/
+
+DesafioSelecao.Dominio/obj/
+
+DesafioSelecao.TesteDeUnidade/bin/
+
+DesafioSelecao.TesteDeUnidade/obj/
