Criando interface de  comunicação com contemplados

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ DesafioSelecao.Dominio/obj/
 DesafioSelecao.TesteDeUnidade/bin/
 
 DesafioSelecao.TesteDeUnidade/obj/
+
+DesafioSelecao.API/bin/
+
+DesafioSelecao.API/obj/
